--- a/css/styles.css
+++ b/css/styles.css
@@ -1,16 +1,603 @@
-/* удалить если есть normalize.css */
+/*! modern-normalize | MIT License | https://github.com/sindresorhus/modern-normalize */
+/* Document
+   ========================================================================== */
+/**
+ * Use a better box model (opinionated).
+ */
 html {
   box-sizing: border-box;
 }
-/* удалить если есть normalize.css */
+
 *,
-*::after,
-*::before {
+*::before,
+*::after {
   box-sizing: inherit;
 }
-body {
-  /* чтобы убрать отступы по углам */
-  /* удалить если есть normalize.css */
-  margin: 0;
-  /* задаются текст, размер шрифта */
+
+/**
+ * Correct the line height in all browsers.
+ */
+html {
+  line-height: 1.15;
 }
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers (opinionated).
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Grouping content
+   ========================================================================== */
+/**
+ * 1. Add the correct box sizing in Firefox.
+ */
+hr {
+  box-sizing: content-box;
+  /* 1 */
+  height: 0;
+  /* 1 */
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+pre {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove gaps in links underline in iOS 8+ and Safari 8+.
+ */
+a {
+  -webkit-text-decoration-skip: objects;
+}
+
+/**
+ * Add the correct text decoration in Chrome, Edge, IE, Opera, and Safari.
+ */
+abbr[title] {
+  text-decoration: underline dotted;
+}
+
+/**
+ * Add the correct font weight in Chrome, Edge, and Safari.
+ */
+b,
+strong {
+  font-weight: bolder;
+}
+
+/**
+ * 1. Correct the inheritance and scaling of font size in all browsers.
+ * 2. Correct the odd `em` font sizing in all browsers.
+ */
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  /* 1 */
+  font-size: 1em;
+  /* 2 */
+}
+
+/**
+ * Add the correct font size in all browsers.
+ */
+small {
+  font-size: 80%;
+}
+
+/**
+ * Prevent `sub` and `sup` elements from affecting the line height in
+ * all browsers.
+ */
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+sup {
+  top: -0.5em;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  /* 1 */
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button,
+select {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type="reset"],
+[type="submit"] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * Correct the padding in Firefox.
+ */
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+
+/**
+ * Remove the padding so developers are not caught out when they zero out
+ *    `fieldset` elements in all browsers.
+ */
+legend {
+  padding: 0;
+}
+
+/**
+ * Add the correct vertical alignment in Chrome, Firefox, and Opera.
+ */
+progress {
+  vertical-align: baseline;
+}
+
+/**
+ * Correct the cursor style of increment and decrement buttons in Chrome.
+ */
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type="search"] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+ * Remove the inner padding and cancel buttons in Chrome and Safari on macOS.
+ */
+[type="search"]::-webkit-search-cancel-button,
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/* Interactive
+   ========================================================================== */
+/*
+ * Add the correct display in Edge, IE, and Firefox.
+ */
+details {
+  display: block;
+}
+
+/*
+ * Add the correct display in all browsers.
+ */
+summary {
+  display: list-item;
+}
+
+.logo, .main-nav__menu-link, .main-nav__contacts-link, .main-nav__socials-link {
+  text-decoration: none;
+  color: currentColor;
+}
+
+.main-nav__menu, .main-nav__contacts, .main-nav__socials {
+  list-style: none;
+  margin: 0;
+  padding-left: 0;
+}
+
+:root {
+  --accent-color: #2196f3;
+  --main-text-color: #757575;
+  --title-text-color: #212121;
+  --dark-bg-text-color: #ffffff;
+  --light-bg-text-color: #000000;
+  --socials-fill-color: #afb1b8;
+  --primary-bg-color: #ffffff;
+  --secondary-bg-color: #f5f4fa;
+  --dark-bg-color: #2f303a;
+  --main-font: "Roboto", sans-serif;
+  --title-font: "Raleway", sans-serif;
+}
+
+/* raleway-regular - latin */
+@font-face {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./../fonts/raleway-v19-latin-regular.eot");
+  /* IE9 Compat Modes */
+  src: local(""), url("./../fonts/raleway-v19-latin-regular.eot?#iefix") format("embedded-opentype"), url("./../fonts/raleway-v19-latin-regular.woff2") format("woff2"), url("./../fonts/raleway-v19-latin-regular.woff") format("woff"), url("./../fonts/raleway-v19-latin-regular.ttf") format("truetype"), url("./../fonts/raleway-v19-latin-regular.svg#Raleway") format("svg");
+  /* Legacy iOS */
+}
+
+/* raleway-700 - latin */
+@font-face {
+  font-family: "Raleway";
+  font-style: normal;
+  font-weight: 700;
+  src: url("./../fonts/raleway-v19-latin-700.eot");
+  /* IE9 Compat Modes */
+  src: local(""), url("./../fonts/raleway-v19-latin-700.eot?#iefix") format("embedded-opentype"), url("./../fonts/raleway-v19-latin-700.woff2") format("woff2"), url("./../fonts/raleway-v19-latin-700.woff") format("woff"), url("./../fonts/raleway-v19-latin-700.ttf") format("truetype"), url("./../fonts/raleway-v19-latin-700.svg#Raleway") format("svg");
+  /* Legacy iOS */
+}
+
+/* roboto-regular - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 400;
+  src: url("./../fonts/roboto-v27-latin-regular.eot");
+  /* IE9 Compat Modes */
+  src: local(""), url("./../fonts/roboto-v27-latin-regular.eot?#iefix") format("embedded-opentype"), url("./../fonts/roboto-v27-latin-regular.woff2") format("woff2"), url("./../fonts/roboto-v27-latin-regular.woff") format("woff"), url("./../fonts/roboto-v27-latin-regular.ttf") format("truetype"), url("./../fonts/roboto-v27-latin-regular.svg#Roboto") format("svg");
+  /* Legacy iOS */
+}
+
+/* roboto-500 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  src: url("./../fonts/roboto-v27-latin-500.eot");
+  /* IE9 Compat Modes */
+  src: local(""), url("./../fonts/roboto-v27-latin-500.eot?#iefix") format("embedded-opentype"), url("./../fonts/roboto-v27-latin-500.woff2") format("woff2"), url("./../fonts/roboto-v27-latin-500.woff") format("woff"), url("./../fonts/roboto-v27-latin-500.ttf") format("truetype"), url("./../fonts/roboto-v27-latin-500.svg#Roboto") format("svg");
+  /* Legacy iOS */
+}
+
+/* roboto-700 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 700;
+  src: url("./../fonts/roboto-v27-latin-700.eot");
+  /* IE9 Compat Modes */
+  src: local(""), url("./../fonts/roboto-v27-latin-700.eot?#iefix") format("embedded-opentype"), url("./../fonts/roboto-v27-latin-700.woff2") format("woff2"), url("./../fonts/roboto-v27-latin-700.woff") format("woff"), url("./../fonts/roboto-v27-latin-700.ttf") format("truetype"), url("./../fonts/roboto-v27-latin-700.svg#Roboto") format("svg");
+  /* Legacy iOS */
+}
+
+/* roboto-900 - latin */
+@font-face {
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 900;
+  src: url("./../fonts/roboto-v27-latin-900.eot");
+  /* IE9 Compat Modes */
+  src: local(""), url("./../fonts/roboto-v27-latin-900.eot?#iefix") format("embedded-opentype"), url("./../fonts/roboto-v27-latin-900.woff2") format("woff2"), url("./../fonts/roboto-v27-latin-900.woff") format("woff"), url("./../fonts/roboto-v27-latin-900.ttf") format("truetype"), url("./../fonts/roboto-v27-latin-900.svg#Roboto") format("svg");
+  /* Legacy iOS */
+}
+
+body {
+  font-family: var(--main-font);
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--main-text-color);
+  background-color: var(--primary-bg-color);
+}
+
+.visually-hidden {
+  position: absolute !important;
+  clip: rect(1px 1px 1px 1px);
+  clip: rect(1px, 1px, 1px, 1px);
+  padding: 0 !important;
+  border: 0 !important;
+  height: 1px !important;
+  width: 1px !important;
+  overflow: hidden;
+}
+
+.container {
+  margin-right: auto;
+  margin-left: auto;
+  padding-right: 15px;
+  padding-left: 15px;
+  max-width: 1200px;
+}
+
+@keyframes planeMove {
+  0% {
+    transform: translate(0, 0);
+  }
+  45% {
+    opacity: 1;
+    transform: translate(-10px, 10px) scale(1.1);
+  }
+  50% {
+    opacity: 0.95;
+  }
+  80% {
+    opacity: 0.1;
+    transform: translate(25px, -15px) scale(0.2);
+  }
+  85% {
+    opacity: 0;
+  }
+}
+
+.logo {
+  display: inline-block;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.166;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
+.logo--dark {
+  color: var(--light-bg-text-color);
+}
+
+.logo--light {
+  color: var(--dark-bg-text-color);
+}
+
+.header {
+  position: relative;
+}
+
+@media screen and (max-width: 767px) {
+  .header__logo {
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__logo {
+    padding-top: 25px;
+    padding-bottom: 25px;
+  }
+}
+
+.burger-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  z-index: 110;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  border: none;
+  padding: 0;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-button {
+    display: none;
+  }
+}
+
+.burger-button.is-open .burger-button__icon {
+  display: none;
+}
+
+.burger-button__close-icon {
+  display: none;
+}
+
+.burger-button.is-open .burger-button__close-icon {
+  display: block;
+}
+
+@media screen and (max-width: 767px) {
+  .main-nav {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    padding: 48px 40px;
+    width: 100vw;
+    height: 100vh;
+    background-color: var(--dark-bg-text-color);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .main-nav__menu-item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.main-nav__menu-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+@media screen and (max-width: 767px) {
+  .main-nav__menu-link {
+    font-size: 40px;
+    line-height: 1.175;
+  }
+}
+
+.main-nav__menu-link--active {
+  color: var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .main-nav__contacts {
+    margin-top: auto;
+    margin-bottom: 64px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .main-nav__contacts-item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+.main-nav__contacts-link {
+  font-weight: 500;
+  letter-spacing: 0.02em;
+  color: var(--main-text-color);
+}
+
+@media screen and (max-width: 767px) {
+  .main-nav__contacts-link {
+    font-size: 24px;
+    line-height: 1.166;
+  }
+}
+
+.main-nav__contacts-link--accented {
+  line-height: 1.176;
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 396px) and (max-width: 767px) {
+  .main-nav__contacts-link--accented {
+    font-size: 34px;
+  }
+}
+
+.main-nav__contacts-icon {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__contacts-icon {
+    display: block;
+  }
+}
+
+.main-nav__socials {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 768px) {
+  .main-nav__socials {
+    display: none;
+  }
+}
+
+.main-nav__socials-item {
+  position: relative;
+}
+
+.main-nav__socials-item:not(:last-child) {
+  margin-right: 20px;
+}
+
+.main-nav__socials-item:not(:last-child)::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  right: -10px;
+  display: block;
+  width: 1px;
+  height: 100%;
+  background-color: rgba(33, 33, 33, 0.2);
+}
+
+.main-nav__socials-link {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.222;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+/*# sourceMappingURL=styles.css.map */
