--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,5 +1,19 @@
 // vendors - сторонние стили
+@import "./vendors/normalize";
+
 // utils - mixins, variables, placeholders
+@import "./utils/placeholders";
+@import "./utils/variables";
+
 // base - базовые стили. подключение шрифтов, сбросы базовых стилей и первичная стилизация
+// ! подключить шрифты
+@import "./base/fonts";
+@import "./base/common";
+@import "./base/container";
+@import "./base/keyframes";
+
 // components - маленькие фрагменты, которые вкладываются в разные блоки
+@import "./components/logo";
+
 // layouts - основная разметка. Глобальные секции: сетки, секции, хедер, галереи, гриды
+@import "./layouts/header";
