--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -34,6 +34,11 @@
 }
 
 .burger-button__icon {
+  .burger-button:hover &,
+  .burger-button:focus & {
+    fill: var(--accent-color);
+  }
+
   .burger-button.is-open & {
     display: none;
   }
@@ -58,6 +63,17 @@
     width: 100vw;
     height: 100vh;
     background-color: var(--dark-bg-text-color);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+      visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    pointer-events: none;
+  }
+
+  &.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: initial;
   }
 }
 
