--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,5 +1,13 @@
 .header {
   position: relative;
+  border-bottom: 1px solid #ececec;
+}
+
+.header__container {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .header__logo {
@@ -8,6 +16,7 @@
     padding-bottom: 16px;
   }
   @media screen and (min-width: 768px) {
+    margin-right: 90px;
     padding-top: 25px;
     padding-bottom: 25px;
   }
@@ -68,17 +77,27 @@
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
       visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
     pointer-events: none;
-  }
 
-  &.is-open {
-    opacity: 1;
-    visibility: visible;
-    pointer-events: initial;
+    &.is-open {
+      opacity: 1;
+      visibility: visible;
+      pointer-events: initial;
+    }
+  }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
   }
 }
 
 .main-nav__menu {
   @extend %list-reset;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+  }
 }
 
 .main-nav__menu-item {
@@ -87,17 +106,45 @@
       margin-bottom: 32px;
     }
   }
+
+  @media screen and (min-width: 768px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 }
 .main-nav__menu-link {
   @extend %link-reset;
-
+  position: relative;
   font-weight: 500;
+  line-height: 1.166;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
+
+  &--active::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: var(--accent-color);
+  }
 
   @media screen and (max-width: 767px) {
     font-size: 40px;
     line-height: 1.175;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
   }
 
   &--active {
@@ -112,6 +159,10 @@
     margin-top: auto;
     margin-bottom: 64px;
   }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+  }
 }
 
 .main-nav__contacts-item {
@@ -120,34 +171,70 @@
       margin-bottom: 32px;
     }
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 30px;
+    }
+  }
 }
 
 .main-nav__contacts-link {
   @extend %link-reset;
 
+  display: flex;
+  align-items: center;
   font-weight: 500;
+  line-height: 1.166;
   letter-spacing: 0.02em;
   color: var(--main-text-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    color: var(--accent-color);
+  }
 
   @media screen and (max-width: 767px) {
     font-size: 24px;
-    line-height: 1.166;
+  }
+
+  @media screen and (min-width: 768px) {
+    font-size: 12px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    font-size: 12px;
   }
 
   &--accented {
-    @media screen and (min-width: 396px) and (max-width: 767px) {
+    @media screen and (max-width: 767px) {
       font-size: 34px;
+      line-height: 1.176;
+      color: var(--accent-color);
     }
-    line-height: 1.176;
-    color: var(--accent-color);
   }
 }
 
 .main-nav__contacts-icon {
   display: none;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: currentColor;
 
   @media screen and (min-width: 768px) {
     display: block;
+    margin-right: 8px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
   }
 }
 
@@ -166,12 +253,12 @@
   &:not(:last-child) {
     margin-right: 20px;
 
+    // разделитель
     &::after {
       content: "";
       position: absolute;
       top: 0;
       right: -10px;
-      display: block;
       width: 1px;
       height: 100%;
       background-color: rgba(33, 33, 33, 0.2);
