--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -7,13 +7,15 @@
 
 // base - базовые стили. подключение шрифтов, сбросы базовых стилей и первичная стилизация
 // ! подключить шрифты
-@import "./base/fonts";
+// @import "./base/fonts";
 @import "./base/common";
 @import "./base/container";
 @import "./base/keyframes";
 
 // components - маленькие фрагменты, которые вкладываются в разные блоки
 @import "./components/logo";
+@import "./components/btn";
 
 // layouts - основная разметка. Глобальные секции: сетки, секции, хедер, галереи, гриды
 @import "./layouts/header";
+@import "./layouts/hero";
