--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -16,7 +16,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./../../images/hero/hero-mobile-480.jpg");
+      url("../images/hero/hero-mobile-480.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
@@ -29,7 +29,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("./../../images/hero/hero-mobile-960.jpg");
+          url("../images/hero/hero-mobile-960.jpg");
       }
     }
 
@@ -44,7 +44,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("./../../images/hero/hero-mobile-1440.jpg");
+          url("../images/hero/hero-mobile-1440.jpg");
       }
     }
   }
@@ -55,7 +55,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./../../images/hero/hero-tablet-768.jpg");
+      url("../images/hero/hero-tablet-768.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
@@ -68,7 +68,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("./../../images/hero/hero-tablet-1536.jpg");
+          url("../images/hero/hero-tablet-1536.jpg");
       }
     }
 
@@ -83,7 +83,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("./../../images/hero/hero-tablet-2304.jpg");
+          url("../images/hero/hero-tablet-2304.jpg");
       }
     }
   }
@@ -100,7 +100,7 @@
         rgba(47, 48, 58, 0.4),
         rgba(47, 48, 58, 0.4)
       ),
-      url("./../../images/hero/hero-desktop-1600.jpg");
+      url("../images/hero/hero-desktop-1600.jpg");
 
     @media screen and (min-device-pixel-ratio: 2),
       screen and (-webkit-min-device-pixel-ratio: 2),
@@ -113,7 +113,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("./../../images/hero/hero-desktop-3200.jpg");
+          url("../images/hero/hero-desktop-3200.jpg");
       }
     }
 
@@ -128,7 +128,7 @@
             rgba(47, 48, 58, 0.4),
             rgba(47, 48, 58, 0.4)
           ),
-          url("./../../images/hero/hero-desktop-4800.jpg");
+          url("../images/hero/hero-desktop-4800.jpg");
       }
     }
   }
