--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -13,4 +13,7 @@
   --main-font: "Roboto", sans-serif;
   --title-font: "Raleway", sans-serif;
   // grid
+  --grid-item-qt: 2;
+  --grid-item-r-gap: 30px;
+  --grid-item-b-gap: 30px;
 }
