--- a/css/styles.css
+++ b/css/styles.css
@@ -268,7 +268,7 @@ summary {
   color: currentColor;
 }
 
-.main-nav__menu, .main-nav__contacts, .main-nav__socials, .benefits {
+.main-nav__menu, .main-nav__contacts, .main-nav__socials, .benefits, .services {
   list-style: none;
   margin: 0;
   padding-left: 0;
@@ -296,6 +296,9 @@ summary {
   --dark-bg-color: #2f303a;
   --main-font: "Roboto", sans-serif;
   --title-font: "Raleway", sans-serif;
+  --grid-item-qt: 2;
+  --grid-item-r-gap: 30px;
+  --grid-item-b-gap: 30px;
 }
 
 body {
@@ -805,9 +808,38 @@ body {
   padding: 10px 32px;
 }
 
+@media screen and (min-width: 768px) {
+  .benefits {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-1 * var(--grid-item-r-gap));
+    margin-bottom: calc(-1 * var(--grid-item-b-gap));
+  }
+}
+
 @media screen and (max-width: 767px) {
   .benefits__item:not(:last-child) {
     margin-bottom: 30px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .benefits__item {
+    margin-right: var(--grid-item-r-gap);
+    margin-bottom: var(--grid-item-b-gap);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .benefits__item {
+    flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .benefits__item {
+    --grid-item-qt: 4;
+    flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
   }
 }
 
@@ -829,5 +861,14 @@ body {
   text-transform: uppercase;
   color: var(--title-text-color);
   text-align: center;
+}
+
+.services-section {
+  padding-top: 0;
+}
+
+.services * {
+  background-color: palegreen;
+  outline: 1px solid orange;
 }
 /*# sourceMappingURL=styles.css.map */
