--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -2,7 +2,7 @@
 @import "./vendors/normalize";
 
 // utils - mixins, variables, placeholders
-@import "./utils/placeholders";
+// @import "./utils/placeholders";
 @import "./utils/variables";
 
 // base - базовые стили. подключение шрифтов, сбросы базовых стилей и первичная стилизация
