--- a/sass/layouts/_services.scss
+++ b/sass/layouts/_services.scss
@@ -1,30 +1,31 @@
 .services-section {
+  display: none;
   padding-top: 0;
-}
-.services {
-  @extend %list-reset;
-  & * {
-    background-color: palegreen;
-    outline: 1px solid orange;
+
+  @media screen and (min-width: 1200px) {
+    display: block;
   }
-  // display: flex;
-  // justify-content: space-between;
 }
-// .services__item {
-//   position: relative;
-// }
-// .services__img-label {
-//   position: absolute;
-//   bottom: 0;
-//   padding-top: 27px;
-//   padding-bottom: 27px;
-//   width: 100%;
-//   font-weight: 700;
-//   line-height: 1.14;
-//   letter-spacing: 0.03em;
-//   text-align: center;
-//   text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-//   text-transform: uppercase;
-//   color: var(--dark-bg-text-color);
-//   background: rgba(47, 48, 58, 0.8);
-// }
+
+.services {
+  display: flex;
+  justify-content: space-between;
+}
+.services__item {
+  position: relative;
+}
+
+.services__label {
+  position: absolute;
+  bottom: 0;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  width: 100%;
+  font-weight: 700;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-align: center;
+  text-transform: uppercase;
+  color: var(--dark-bg-text-color);
+  background: rgba(47, 48, 58, 0.8);
+}
