socials in team section added

--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -6,6 +6,7 @@
   --dark-bg-text-color: #ffffff;
   --light-bg-text-color: #000000;
   --socials-fill-color: #afb1b8;
+  --socials-dark-bg-color: rgba(255, 255, 255, 0.1);
   --primary-bg-color: #ffffff;
   --secondary-bg-color: #f5f4fa;
   --dark-bg-color: #2f303a;
