--- a/css/styles.css
+++ b/css/styles.css
@@ -270,6 +270,7 @@ summary {
   --dark-bg-text-color: #ffffff;
   --light-bg-text-color: #000000;
   --socials-fill-color: #afb1b8;
+  --socials-dark-bg-color: rgba(255, 255, 255, 0.1);
   --primary-bg-color: #ffffff;
   --secondary-bg-color: #f5f4fa;
   --dark-bg-color: #2f303a;
@@ -389,6 +390,53 @@ p {
   color: var(--dark-bg-text-color);
   background-color: var(--accent-color);
   cursor: pointer;
+}
+
+.socials {
+  display: inline-flex;
+}
+
+.socials__item {
+  width: 44px;
+  height: 44px;
+}
+
+.socials__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.socials__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  transform: rotate(turn) scale(1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials__link--dark {
+  background-color: var(--socials-dark-bg-color);
+}
+
+.socials__link:hover {
+  background-color: var(--accent-color);
+  transform: rotate(0.999turn) scale(1.1);
+}
+
+.socials__icon {
+  fill: var(--socials-fill-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.socials__icon--light {
+  fill: var(--dark-bg-text-color);
+}
+
+.socials__link:hover .socials__icon,
+.socials__link:focus .socials__icon {
+  fill: var(--dark-bg-text-color);
 }
 
 .section {
