--- a/sass/components/_socials.scss
+++ b/sass/components/_socials.scss
@@ -1,10 +1,47 @@
 .socials {
+  display: inline-flex;
 }
+
 .socials__item {
+  width: 44px;
+  height: 44px;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
+
 .socials__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  width: 100%;
+  height: 100%;
+  transform: rotate(turn) scale(1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &--dark {
+    background-color: var(--socials-dark-bg-color);
+  }
+
+  &:hover {
+    background-color: var(--accent-color);
+    transform: rotate(0.999turn) scale(1.1);
+  }
 }
-.link {
-}
+
 .socials__icon {
+  fill: var(--socials-fill-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &--light {
+    fill: var(--dark-bg-text-color);
+  }
+
+  .socials__link:hover &,
+  .socials__link:focus & {
+    fill: var(--dark-bg-text-color);
+  }
 }
