--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -24,3 +24,5 @@
 @import "./layouts/benefits";
 @import "./layouts/services";
 @import "./layouts/team";
+@import "./layouts/clients";
+@import "./layouts/footer";
