--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -4,6 +4,7 @@
   --main-text-color: #757575;
   --title-text-color: #212121;
   --dark-bg-text-color: #ffffff;
+  --dark-bg-secondary-color: rgba(255, 255, 255, 0.6);
   --light-bg-text-color: #000000;
   --socials-fill-color: #afb1b8;
   --socials-dark-bg-color: rgba(255, 255, 255, 0.1);
