--- a/css/styles.css
+++ b/css/styles.css
@@ -268,6 +268,7 @@ summary {
   --main-text-color: #757575;
   --title-text-color: #212121;
   --dark-bg-text-color: #ffffff;
+  --dark-bg-secondary-color: rgba(255, 255, 255, 0.6);
   --light-bg-text-color: #000000;
   --socials-fill-color: #afb1b8;
   --socials-dark-bg-color: rgba(255, 255, 255, 0.1);
@@ -331,7 +332,24 @@ p {
   margin-left: auto;
   padding-right: 15px;
   padding-left: 15px;
-  max-width: 1200px;
+}
+
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
 }
 
 @keyframes planeMove {
@@ -879,11 +897,6 @@ p {
   .benefits__item {
     margin-right: var(--grid-item-r-gap);
     margin-bottom: var(--grid-item-b-gap);
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .benefits__item {
     flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
   }
 }
@@ -891,7 +904,6 @@ p {
 @media screen and (min-width: 1200px) {
   .benefits__item {
     --grid-item-qt: 4;
-    flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
   }
 }
 
@@ -954,18 +966,20 @@ p {
   background-color: var(--secondary-bg-color);
 }
 
-.team {
-  display: flex;
-  flex-wrap: wrap;
-  margin-right: calc(-1 * var(--grid-item-r-gap));
-  margin-bottom: calc(-1 * var(--grid-item-b-gap));
+@media screen and (min-width: 768px) {
+  .team {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: calc(-1 * var(--grid-item-r-gap));
+    margin-bottom: calc(-1 * var(--grid-item-b-gap));
+  }
 }
 
 .team__item {
+  background-color: var(--primary-bg-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   text-align: center;
-  background-color: var(--primary-bg-color);
 }
 
 @media screen and (max-width: 767.98px) {
@@ -978,11 +992,6 @@ p {
   .team__item {
     margin-right: var(--grid-item-r-gap);
     margin-bottom: var(--grid-item-b-gap);
-  }
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
-  .team__item {
     flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
   }
 }
@@ -990,7 +999,6 @@ p {
 @media screen and (min-width: 1200px) {
   .team__item {
     --grid-item-qt: 4;
-    flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
   }
 }
 
@@ -1010,5 +1018,230 @@ p {
   margin-bottom: 16px;
   font-size: 16px;
   line-height: 1.19;
+}
+
+.clients {
+  display: flex;
+  flex-wrap: wrap;
+  margin-right: calc(-1 * var(--grid-item-r-gap));
+  margin-bottom: calc(-1 * var(--grid-item-b-gap));
+}
+
+.clients__item {
+  flex-basis: calc( (100% - var(--grid-item-qt) * var(--grid-item-r-gap)) / var(--grid-item-qt));
+  margin-right: var(--grid-item-r-gap);
+  margin-bottom: var(--grid-item-b-gap);
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+  .clients__item {
+    --grid-item-qt: 3;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .clients__item {
+    --grid-item-qt: 6;
+  }
+}
+
+.clients__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid var(--socials-fill-color);
+  border-radius: 4px;
+  padding-top: 16px;
+  padding-bottom: 16px;
+  width: 100%;
+  height: 100%;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__link:hover, .clients__link:focus {
+  border-color: var(--accent-color);
+}
+
+.clients__icon {
+  fill: var(--socials-fill-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.clients__link:hover .clients__icon,
+.clients__link:focus .clients__icon {
+  fill: var(--accent-color);
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  height: 600px;
+  background-color: var(--dark-bg-color);
+}
+
+@media screen and (min-width: 768px) {
+  .footer {
+    height: 463px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer {
+    height: 252px;
+  }
+}
+
+.footer__container {
+  display: flex;
+  height: 100%;
+}
+
+@media screen and (max-width: 767.98px) {
+  .footer__container {
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer__container {
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: space-between;
+  }
+}
+
+@media screen and (max-width: 1199.98px) {
+  .footer__container {
+    text-align: center;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__container {
+    align-items: baseline;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 1199.98px) {
+  .footer__logo {
+    margin-bottom: 20px;
+  }
+}
+
+.address__item {
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .address__item {
+    margin-bottom: 9px;
+  }
+}
+
+.address__link {
+  font-style: normal;
+  color: var(--dark-bg-secondary-color);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.address__link--light {
+  color: var(--dark-bg-text-color);
+}
+
+.address__link:hover, .address__link:focus {
+  color: var(--accent-color);
+}
+
+@media screen and (min-width: 768px) {
+  .footer__address,
+  .footer__socials {
+    flex-basis: calc((100% - 30px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__address,
+  .footer__socials {
+    flex-basis: calc((50% - 45px) / 2);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer__subscription {
+    flex-basis: calc(50% - 15px);
+  }
+}
+
+.footer__subtitle {
+  display: block;
+  margin-bottom: 20px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--dark-bg-text-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription-form {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
+
+.subscription-form__input {
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  padding: 5px 15px;
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--dark-bg-secondary-color);
+  background-color: var(--dark-bg-color);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+}
+
+.subscription-form__input:focus {
+  border-color: var(--main-bg-color);
+  color: var(--dark-bg-text-color);
+}
+
+@media screen and (max-width: 1199.98px) {
+  .subscription-form__input {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscription-form__input {
+    width: 358px;
+  }
+}
+
+.subscription-form__btn {
+  position: relative;
+  padding: 10px 62px 10px 29px;
+  min-width: 200px;
+}
+
+.subscription-form__btn-icon {
+  position: absolute;
+  top: 13px;
+  right: 28px;
+  fill: var(--dark-bg-text-color);
+}
+
+.subscription-form__btn:hover .subscription-form__btn-icon,
+.subscription-form__btn:focus .subscription-form__btn-icon {
+  animation-name: planeMove;
+  animation-duration: 1500ms;
+  animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /*# sourceMappingURL=styles.css.map */
