--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -4,6 +4,15 @@
   padding-right: 15px;
   padding-left: 15px;
 
-  // min-width: 320px;
-  max-width: 1200px;
+  @media screen and (min-width: 480px) {
+    width: 480px;
+  }
+
+  @media screen and (min-width: 768px) {
+    width: 768px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 1200px;
+  }
 }
